verse;.json changing

--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "exchange app on mern stack",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "server": "nodemon app.js --prefix server",
+    "start": "node index.js",
+    "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
