--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,4 +1,5 @@
 {
     "version":2,
-    "builds":[{"src":"./app.js", "use":"@vercel/node"}]
+    "builds":[{"src":"./index.js", "use":"@vercel/node"}],
+    "routes":[{"src":"./index.js", "dest":"/"}]
 }
