--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "mern-exchange",
   "version": "1.0.0",
-  "description": "exchange app on mern stack",
+  "description": "exchange app on react & express",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js"
-    
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm run start --prefix client",
+    "server": "nodemon index.js --prefix server",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [
     "mern",
@@ -15,12 +16,6 @@
   ],
   "author": "deus_kh",
   "license": "ISC",
-  "dependencies": {
-    "config": "^3.3.11",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.1",
-    "nodemailer": "^6.9.9"
-  },
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.3"
