--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,8 @@
 {
     "version":2,
     "builds":[{"src":"./index.js", "use":"@vercel/node"}],
-    "routes":[{"src":"./index.js", "dest":"/"}]
+    "routes":[
+        {"src":"/", "dest":"./index.js"},
+        {"src":"/rates/:id","dest":"./index.js"}
+    ]
 }
