--- a/client/.env
+++ b/client/.env
@@ -1,8 +1,8 @@
 NODE_PATH=./src
 # REACT_APP_API_URL = "https://v6.exchangerate-api.com/v6/e9863347a5add822c7c074e7/latest/"
 # REACT_APP_API_URL = "http://localhost:3333/"
-# REACT_APP_API_URL = "http://localhost:5005/rates/"
-REACT_APP_API_URL = "https://akex-server.vercel.app/rates/"
+REACT_APP_API_URL = "http://localhost:5005/api/"
+# REACT_APP_API_URL = "https://akex-server.vercel.app/rates/"
 # SENDGRID_API_KEY="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"
-REACT_APP_SERVER = "https://akex-server.vercel.app"
-# REACT_APP_SERVER = "http://localhost:5005"
+# REACT_APP_SERVER = "https://akex-server.vercel.app"
+REACT_APP_SERVER = "http://localhost:5005"
