--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js"
-    
   },
   "keywords": [
     "mern",
@@ -17,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.11",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.9"
