--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,7 +1,7 @@
 {
-    "version":2,
+    "version":3,
     "builds":[{"src":"./index.js", "use":"@vercel/node"}],
     "routes":[
-        {"src":"/*", "dest":"/index.js"}
+        {"src":"/(.*)", "dest":"/index.js"}
     ]
 }
