Full completed version

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-API_LINK = "https://cdn.jsdelivr.net/gh/fawazahmed0/currency-api@1/latest/"
+API_LINK="https://cdn.jsdelivr.net/gh/fawazahmed0/currency-api@1/latest/"
+HOST_PORT=5005
