--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "mern-exchange",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "exchange app on react & express",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm run start --prefix client",
     "server": "nodemon index.js --prefix server",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "serverinst":"npm install --prefix server",
+    "clientinst":"npm install --prefix client",
+    "inst": "concurrently \"npm run serverinst\" \"npm run clientinst\""
   },
   "keywords": [
     "mern",
