Changing API Link

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-API_LINK="https://cdn.jsdelivr.net/gh/fawazahmed0/currency-api@1/latest/"
+API_LINK="https://cdn.jsdelivr.net/npm/@fawazahmed0/currency-api@latest/v1/"
 HOST_PORT=5005
